2007-06-17  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Packages.mdse, Monodoc.Editor.mds, Monodoc.Editor.Gui,
	  Monodoc.Editor.Gui/AssemblyInfo.cs,
	  Monodoc.Editor.Gui/Monodoc.Editor.Gui.mdp,
	  Monodoc.Editor.Gui/gtk-gui,
	  Monodoc.Editor.Gui/gtk-gui/generated.cs,
	  Monodoc.Editor.Gui/gtk-gui/objects.xml,
	  Monodoc.Editor.Gui/gtk-gui/gui.stetic,
	  Monodoc.Editor.Gui/DocumentEditor.cs: Added Monodoc.Editor.Gui
	  widget library that will hold the custom TextView, TextTag and
	  TextTagTable for Editor.

2007-06-17  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Monodoc.Editor.Utils/AssemblyInfo.cs,
	  Monodoc.Editor.Utils/Test/TestMonoDocument.cs,
	  Monodoc.Editor.Utils/Test/TestEcmaReader.cs,
	  Monodoc.Editor.Utils/Test.cs, Monodoc.Editor.Utils/MonoDocument.cs,
	  Monodoc.Editor.Utils/EcmaReader.cs, Monodoc.Editor/AssemblyInfo.cs,
	  Monodoc.Editor/EditorWindow.cs: More name changes.

2007-06-16  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Monodoc.Editor/Monodoc.Editor.mdp: Change reference.

2007-06-16  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Monodoc.Editor/Monodoc.Editor.mdp, Monodoc.Editor/app.desktop,
	  Monodoc.Editor.mds: Continue name changes.

	* Monodoc.Editor.mds:  Changed the MonodocEditor to Monodoc.Editor.

	* EditorUtils: Changed name to Monodoc.Editor.Utils.

2007-06-16  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* MonodocEditor/EditorWindow.cs, MonodocEditor/MonodocEditor.mdp,
	  Packages.mdse, MonodocEditor.mds, EditorUtils/AssemblyInfo.cs,
	  EditorUtils/Test/TestMonoDocument.cs,
	  EditorUtils/Test/TestEcmaReader.cs, EditorUtils/Test.cs,
	  EditorUtils/EcmaUtils.mdp, EditorUtils/EditorUtils.mdp,
	  EditorUtils/MonoDocument.cs, EditorUtils/EcmaReader.cs: Changed
	  name of subproject EcmaUtils to EditorUtils.

2007-06-16  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* MonodocEditor/EditorWindow.cs, MonodocEditor/MonodocEditor.mdp,
	  EcmaUtils/MonoDocument.cs, EcmaUtils/EcmaReader.cs: Added the